# cxxscore

./: CMakeLists.txt  README.md  astyle.sh  cflags.pri  compiler-graph.pro  compiler-performance-platform.pro  compiler-top10.pro  config.h.in  main.cpp
core/: types.h
core/abstracts/: abstract-container.cpp  abstract-container.h  abstract-platform.cpp  abstract-platform.h  abstract-test-case.cpp  abstract-test-case.h
core/concretes/: ini-logger.cpp  ini-logger.h  linux-platform.cpp  linux-platform.h
core/containers/: compiler-info-container.cpp  compiler-info-container.h  platform-info-container.cpp  platform-info-container.h  test-case-info-container.cpp  test-case-info-container.h  test-result-container.cpp  test-result-container.h  version-info-container.cpp  version-info-container.h
core/core/: data-stream.cpp  data-stream.h
core/enums/: architecture-type.cpp  architecture-type.h  compiler-type.cpp  compiler-type.h  container-type-enum.cpp  container-type-enum.h  container-type.cpp  container-type.h  folder.cpp  folder.h  font-type.cpp  font-type.h  logger-type-enum.cpp  logger-type-enum.h  logger-type.cpp  logger-type.h  platform-type-enum.cpp  platform-type-enum.h  platform-type.cpp  platform-type.h  test-case-id-enum.cpp  test-case-id-enum.h  test-type-enum.cpp  test-type-enum.h  test-type.cpp  test-type.h
core/factories/: color-factory.cpp  color-factory.h  container-factory.cpp  container-factory.h  logger-factory.cpp  logger-factory.h  platform-factory.cpp  platform-factory.h  test-case-factory.cpp  test-case-factory.h  test-factory.cpp  test-factory.h
core/functionals/: compiler-info.cpp  compiler-info.h  container-file.cpp  container-file.h  container-reader.cpp  container-reader.h  container-writer.cpp  container-writer.h  elapsed-time.cpp  elapsed-time.h  info-center.cpp  info-center.h  iterator-namer.cpp  iterator-namer.h  platform-info.cpp  platform-info.h
core/interfaces/: ilogger.cpp  ilogger.h  iplatform.cpp  iplatform.h  itestcase.cpp  itestcase.h
core/interfaces/templates/: itemplate-attach.cpp  itemplate-attach.h
core/loggers/: ini-logger.cpp  ini-logger.h  raw-logger.cpp  raw-logger.h
core/managers/: file-manager.cpp  file-manager.h
core/tests/: base64-test.cpp  base64-test.h  color-brightness-correction-test.cpp  color-brightness-correction-test.h  color-rgb-correction-test.cpp  color-rgb-correction-test.h  empty-call-test.cpp  empty-call-test.h  factorial-test-case.cpp  factorial-test-case.h  fibonacci-test-case.cpp  fibonacci-test-case.h  lambda-test.cpp  lambda-test.h  merge-sort-test-case.cpp  merge-sort-test-case.h  merge-sort-test.cpp  merge-sort-test.h  naive-factorial-test.cpp  naive-factorial-test.h  naive-fibonacci-test.cpp  naive-fibonacci-test.h  naive-nwd-test.cpp  naive-nwd-test.h  nwd-test-case.cpp  nwd-test-case.h  sieve-of-eratosthenes-test.cpp  sieve-of-eratosthenes-test.h  string-concate-test.cpp  string-concate-test.h  tail-call-factorial-test.cpp  tail-call-factorial-test.h  tail-call-fibonacci-test.cpp  tail-call-fibonacci-test.h
gui/widgets/: plot-tab.cpp  plot-tab.h  plot.cpp  plot.h
gui/window/: main-window.cpp  main-window.h  main-window.ui
main/graph/: main.cpp
main/platform/: main.cpp
main/top10/: main.cpp
